--- a/styles/three-image.css
+++ b/styles/three-image.css
@@ -45,6 +45,11 @@
   animation: nav-button-pulse 1.5s linear infinite;
 }
 
+.h5p-static-button .nav-button-pulsar.no-pulse:hover,
+.h5p-text-dialog .nav-button-pulsar:hover {
+  animation: none;
+}
+
 @keyframes nav-button-pulse {
   0% {
     width: 4.5em;
@@ -89,9 +94,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  zoom: 4;
 }
 
-.h5p-close-button {
+.h5p-static-button {
   position: absolute;
   left: 1em;
   top: 0.75em;
@@ -99,31 +105,133 @@
   height: 2em;
 }
 
-.h5p-close-button .nav-button-pulsar,
-.h5p-close-button .outer-nav-button {
+.h5p-static-button .nav-button-pulsar,
+.h5p-static-button .outer-nav-button {
   width: 2em;
   height: 2em;
 }
 
-.h5p-close-button .nav-button-pulsar {
+.h5p-static-button .nav-button-pulsar {
   border: 0.15em solid #fff;
 }
 
-.h5p-close-button .nav-button {
+.h5p-static-button .nav-button {
   width: 1.5em;
   height: 1.5em;
 }
 
-.h5p-close-button .nav-button-icon {
+.h5p-static-button .nav-button-icon {
   width: 0.5em;
   transform: translate(-50%, -50%) rotate(-90deg);
 }
 
-.h5p-close-button .nav-button-pulsar:hover {
-  animation: close-button-pulsars 1s linear infinite;
+.h5p-static-button .nav-button-pulsar:hover {
+  animation: static-button-pulsars 1s linear infinite;
 }
 
-@keyframes close-button-pulsars {
+.h5p-info-button {
+  display: none;
+  position: absolute;
+  top: auto;
+  left: 4em;
+  bottom: 0.75em;
+  width: 2em;
+  height: 2em;
+  z-index: 1;
+}
+
+.h5p-info-button.show {
+  display: block;
+}
+
+.h5p-info-button .nav-button-icon {
+  width: 1.25em;
+  transform: translate(-50%, -50%);
+}
+
+.h5p-text-dialog {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  width: 85%;
+  max-height: 65%;
+  background: white;
+  z-index: 1;
+  padding: 2em 3em;
+  display: flex;
+  box-sizing: border-box;
+}
+
+.h5p-text-content {
+  flex: 1;
+  max-height: 100%;
+  overflow-y: auto;
+}
+
+.h5p-text-dialog .h5p-static-button {
+  top: 0;
+  right: 0;
+}
+
+.h5p-text-dialog .nav-button-wrapper {
+  top: -1em;
+  right: -1em;
+  left: auto;
+  box-shadow: 0 0 1em 0 rgba(0,0,0,0.2);
+  border: 8px solid #fff;
+  background-color: #ebebeb;
+  border-radius: 50%;
+  transition: background 0.5s linear;
+}
+
+.h5p-text-dialog .outer-nav-button {
+  border-radius: 50%;
+  background: transparent;
+}
+
+.h5p-text-dialog .nav-button-icon {
+  width: 1.5em;
+  background: transparent;
+}
+
+.h5p-text-dialog .nav-button {
+  background: transparent;
+}
+
+.h5p-text-dialog .nav-button-wrapper:hover {
+  background: #d6d6d6;
+}
+
+.h5p-text-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  z-index: 2;
+}
+
+.h5p-audio-button {
+  left: 1em;
+}
+
+.nav-button-wrapper.mute .nav-button,
+.nav-button-wrapper.mute .outer-nav-button {
+  background: #000;
+}
+
+.nav-button-wrapper.mute .nav-button-pulsar {
+  border-color: #c8c8c8;
+}
+
+.nav-button-wrapper.start-screen {
+  position: absolute;
+  font-size: 0.5em;
+}
+
+@keyframes static-button-pulsars {
   0% {
     width: 2em;
     height: 2em;
