HFP-2518 Add static scene interaction dragging logic
Add logic for re-rendering scene instead of re-creating the entire
content when changed through the editor

--- a/scripts/components/Scene/SceneTypes/StaticScene.scss
+++ b/scripts/components/Scene/SceneTypes/StaticScene.scss
@@ -8,11 +8,17 @@
   display: flex;
 
   .image-scene-wrapper {
+    display: inline-block;
     margin: auto;
     height: 100%;
+    position: relative;
   }
 
   .image-scene {
     max-height: 100%;
+  }
+
+  .interaction {
+    background: white;
   }
 }
