--- a/scripts/components/Shared/NavigationButton.scss
+++ b/scripts/components/Shared/NavigationButton.scss
@@ -1,42 +1,5 @@
-.nav-button-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 1.5em;
-}
-
-.h5p-static-button .nav-button-icon {
-  width: 0.5em;
-}
-
-.h5p-static-button.bottom-row .nav-button-icon {
-  width: 1.25em;
-}
-
-.h5p-text-dialog .nav-button-icon {
-  width: 1.5em;
-}
-
-.nav-button-wrapper {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.outer-nav-button {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  background: white;
-  width: 4.5em;
-  height: 4.5em;
-  opacity: 0.7;
-  border-radius: 50%;
-}
+@import '../../styles/icons';
+@import '../../styles/colors';
 
 .nav-button {
   position: absolute;
@@ -44,109 +7,76 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  background: #fff;
-  width: 3em;
-  height: 3em;
-  border-radius: 50%;
-}
-
-.nav-button-pulsar {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  width: 4.5em;
-  height: 4.5em;
-  border: 0.3em solid #fff;
+  font-size: 1em;
+  width: 2.5em;
+  height: 2.5em;
   border-radius: 50%;
 
+  background: $questionBackground;
+  border: none;
   cursor: pointer;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  z-index: 1;
 }
 
-.nav-button-pulsar:hover {
-  animation: nav-button-pulse 1.5s linear infinite;
-}
 
-.nav-button-pulsar.no-pulse:hover {
-  animation:none;
-}
-
-.h5p-static-button {
-  position: absolute;
-  left: 1em;
-  top: 0.75em;
-  width: 2em;
-  height: 2em;
-  z-index: 2;
-}
-
-.h5p-static-button.disabled {
+.nav-button.disabled {
   opacity: 0.5;
 }
 
-.bottom-row {
+.nav-button.three-sixty {
+  font-size: 1.75em;
+}
+
+.nav-button.bottom {
   top: auto;
-  left: 4em;
-  bottom: 0.75em;
+  left: 0.75em;
+  bottom: 0.5em;
+  transform: translate(0,0);
 }
 
-.h5p-static-button .nav-button-pulsar,
-.h5p-static-button .outer-nav-button {
-  width: 2em;
-  height: 2em;
+.nav-button:before {
+  font-family: "360-image";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: white;
+  font-size: 1.25em;
 }
 
-.h5p-static-button .nav-button-pulsar {
-  border: 0.15em solid #fff;
+.h5p-question-button:before {
+  content: $question;
 }
 
-.h5p-static-button .nav-button {
-  width: 1.5em;
-  height: 1.5em;
+.h5p-info-button:before {
+  content: $info;
+  font-size: 1.6em;
 }
 
-
-.h5p-static-button .nav-button-pulsar:hover {
-  animation: static-button-pulsars 1s linear infinite;
+.h5p-go-to-scene-button:before {
+  content: $goToScene;
 }
 
-@keyframes nav-button-pulse {
-  0% {
-    width: 4.5em;
-    height: 4.5em;
-    opacity: 1;
-  }
-
-  75% {
-    width: 5.5em;
-    height: 5.5em;
-    opacity: 0;
-  }
-
-  100% {
-    width: 5.5em;
-    height: 5.5em;
-    opacity: 0;
-  }
+.h5p-audio-button:before {
+  content: $audioOn;
 }
 
-@keyframes static-button-pulsars {
-  0% {
-    width: 2em;
-    height: 2em;
-    opacity: 1;
-  }
+.h5p-go-back-button {
+  top: 0.5em;
+  left: 0.75em;
+  transform: translate(0,0);
+}
 
-  75% {
-    width: 2.5em;
-    height: 2.5em;
-    opacity: 0;
-  }
+.h5p-go-back-button:before {
+  content: $goBack;
+}
 
-  100% {
-    width: 2.5em;
-    height: 2.5em;
-    opacity: 0;
-  }
+.h5p-scene-description-button:before {
+  content: $sceneDescription;
 }
