HFP-2579 Add color and button state styles for interactions
Add summary

--- a/scripts/styles/colors.scss
+++ b/scripts/styles/colors.scss
@@ -1,2 +1,14 @@
 // Buttons
-$questionBackground: #373e94;
+$buttonBg: black;
+$interactionBg: #373e94;
+
+// Hover
+$hoverBg: #2b2b2b;
+$interactionHoverBg: #292e6f;
+
+// Active
+$activeBg: black;
+$activeBorder: #969696;
+
+$interactionActiveBg: #1b1f4a;
+$interactionActiveBorder: #8587d4;
