--- a/scripts/components/Shared/NavigationButton.scss
+++ b/scripts/components/Shared/NavigationButton.scss
@@ -3,16 +3,13 @@
 
 .nav-button {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
   font-size: 1em;
   width: 2.5em;
   height: 2.5em;
+  padding: 0;
   border-radius: 50%;
 
-  background: $questionBackground;
+  background: $buttonBg;
   border: none;
   cursor: pointer;
 
@@ -21,8 +18,30 @@
   -ms-user-select: none;
   user-select: none;
   z-index: 1;
+  box-shadow: 0.2em 0.2em 0.3em rgba(0,0,0,0.2);
+
+  &:hover {
+    background: $hoverBg;
+  }
+
+  &:active {
+    background: $activeBg;
+    border: 0.3em solid $activeBorder;
+  }
 }
 
+.nav-button.h5p-interaction-button {
+  background: $interactionBg;
+
+  &:hover {
+    background: $interactionHoverBg;
+  }
+
+  &:active {
+    background: $interactionActiveBg;
+    border-color: $interactionActiveBorder;
+  }
+}
 
 .nav-button.disabled {
   opacity: 0.5;
@@ -36,7 +55,6 @@
   top: auto;
   left: 0.75em;
   bottom: 0.5em;
-  transform: translate(0,0);
 }
 
 .nav-button:before {
@@ -70,7 +88,6 @@
 .h5p-go-back-button {
   top: 0.5em;
   left: 0.75em;
-  transform: translate(0,0);
 }
 
 .h5p-go-back-button:before {
