HFP-2518 Fix resizing of scenes
Fix resizing of image scenes to always use available width or height
Fix resizing of three sixty scene when content is resized

--- a/scripts/components/Scene/SceneTypes/StaticScene.scss
+++ b/scripts/components/Scene/SceneTypes/StaticScene.scss
@@ -8,14 +8,26 @@
   display: flex;
 
   .image-scene-wrapper {
-    display: inline-block;
+    display: block;
     margin: auto;
-    height: 100%;
     position: relative;
+    width: 100%;
+  }
+
+  .image-scene-wrapper.vertical {
+    height: 100%;
+    width: auto;
+
+    .image-scene {
+      height: 100%;
+      width: auto;
+    }
   }
 
   .image-scene {
-    max-height: 100%;
+    align-self: center;
+    width: 100%;
+
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
