HFP-2527 Improve HUD button layout

--- a/scripts/styles/icons.scss
+++ b/scripts/styles/icons.scss
@@ -7,3 +7,6 @@ $sceneDescription: "\e909";
 $audioOn: "\e90a";
 $audioOff: "\e904";
 $close: "\e916";
+$noicon: "\1F605";
+$rotate: "\1F635";
+$submitdialog: "\2744";
