--- a/scripts/components/HUD/Buttons/Button/Button.scss
+++ b/scripts/components/HUD/Buttons/Button/Button.scss
@@ -1,6 +1,8 @@
 @import '../../../../styles/icons';
 
 .hud-button {
+  position: relative;
+  float: left;
   pointer-events: auto;
   border-radius: 50%;
   background: #000;
@@ -8,20 +10,77 @@
   width: 2em;
   height: 2em;
   line-height: 2;
-  overflow: hidden;
   cursor: pointer;
   text-align: center;
+  margin-right: 0.5em;
 
   &:before {
     font-family: "360-image";
+    content: $noicon;
+  }
+
+  &.audio-track:before {
     content: $audioOn;
   }
-  &.active:before {
+  &.audio-track.active:before {
     content: $audioOff;
+  }
+
+  &.scene-description:before {
+    content: $sceneDescription;
+  }
+  &.rotate:before {
+    content: $rotate;
+  }
+  &.submit-dialog:before {
+    content: $submitdialog;
   }
 
   &[aria-disabled=true] {
     cursor: default;
     opacity: 0.5;
+  }
+
+  .tooltip {
+    padding: 0.25em 1em;
+    font-size: 0.875em;
+    background: #000;
+    color: #fff;
+    position: absolute;
+    bottom: 200%;
+    z-index: 11;
+    left: -0.25em;
+    line-height: 1.75;
+    box-shadow: rgba(0, 0, 0, 0.4) 0 3px 10px;
+    pointer-events: none;
+
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0s linear 0.1s, opacity 0.1s linear, bottom 0.1s linear;
+
+    .text-wrap {
+      max-width: 30em;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
+  .tooltip:after {
+    display: block;
+    background: #000;
+    box-shadow: rgba(0, 0, 0, 0.4) 0 3px 10px;
+    content: " ";
+    width: 0.75em;
+    height: 0.75em;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    transform: translateX(130%) translateY(-50%) rotate(45deg);
+  }
+  &:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
+    bottom: 140%;
   }
 }
