--- a/scripts/styles/icons.scss
+++ b/scripts/styles/icons.scss
@@ -8,5 +8,5 @@ $audioOn: "\e90a";
 $audioOff: "\e904";
 $close: "\e916";
 $noicon: "\1F605";
-$rotate: "\1F635";
+$reset: "\e908";
 $submitdialog: "\2744";
