--- a/scripts/styles/colors.scss
+++ b/scripts/styles/colors.scss
@@ -8,7 +8,7 @@ $interactionHoverBg: #292e6f;
 
 // Active
 $activeBg: black;
-$activeBorder: #969696;
+$activeBorder: #6d6d6d;
 
 $interactionActiveBg: #1b1f4a;
 $interactionActiveBorder: #8587d4;
