HFP-2614 Adjust focused interaction colors
Fix not displaying focus effect for nav buttons that don't have children

--- a/scripts/components/Shared/ContextMenu.scss
+++ b/scripts/components/Shared/ContextMenu.scss
@@ -109,6 +109,10 @@
   }
 }
 
+.nav-button-wrapper.h5p-go-to-scene-button.focused .nav-button {
+  border-color: #6d6d6d;
+}
+
 
 .nav-button-wrapper.left-aligned {
   .context-menu {
