--- a/scripts/components/Dialog/Dialog.scss
+++ b/scripts/components/Dialog/Dialog.scss
@@ -32,7 +32,7 @@
   max-height: 87%;
   background: white;
   z-index: 1;
-  padding: 2em 3em;
+  padding: 2em;
   display: flex;
   box-sizing: border-box;
 
