--- a/scripts/components/Shared/ContextMenu.scss
+++ b/scripts/components/Shared/ContextMenu.scss
@@ -16,6 +16,7 @@
   border-radius: 2px;
   -webkit-filter: drop-shadow(0px 0px 0.25em rgba(44,44,44,0.75));
   filter: drop-shadow(0px 0px 0.25em rgba(44, 44, 44, 0.5));
+  z-index: 2;
 
   &:before {
     position: absolute;
