HFP-2615 Remove scrollbars from video interactions

--- a/scripts/components/Dialog/InteractionContent.scss
+++ b/scripts/components/Dialog/InteractionContent.scss
@@ -5,3 +5,11 @@
   transform: initial;
   zoom: initial;
 }
+
+.h5p-text-content > .h5p-video {
+  overflow: hidden;
+}
+
+.h5p-text-dialog.h5p-video .h5p-text-content {
+  height: 100%;
+}
