Add image slider and single choice set libraries

--- a/scripts/components/Dialog/InteractionContent.scss
+++ b/scripts/components/Dialog/InteractionContent.scss
@@ -10,6 +10,7 @@
   overflow: hidden;
 }
 
+.h5p-text-dialog.h5p-imageslider .h5p-text-content,
 .h5p-text-dialog.h5p-video .h5p-text-content {
   height: 100%;
 }
