HFP-2625 Fix removing context menu when dragging

--- a/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
+++ b/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
@@ -14,4 +14,8 @@
     background: url('../../../assets/moving-icon.svg');
     background-size: 100% 100%;
   }
+
+  &.focused .context-menu {
+    display: none;
+  }
 }
