--- a/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
+++ b/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
@@ -27,6 +27,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    background: rgba(27,29,44,0.5);
+    color: white;
+    z-index: 3;
   }
 
   .loading-wrapper {
