--- a/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
+++ b/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
@@ -27,7 +27,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(27,29,44,0.5);
+    background: rgba(27,29,44,0.85);
     color: white;
     z-index: 3;
   }
@@ -46,5 +46,22 @@
   .loading-image-wrapper,
   .loading-image-wrapper img {
     width: 7em;
+  }
+
+  .loading-image-wrapper img {
+    animation-duration: 1.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-name: spinning;
+  }
+}
+
+@keyframes spinning {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
   }
 }
