HFP-2627 Adjust loading overlay to have no opacity when not initialized

--- a/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
+++ b/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
@@ -32,6 +32,10 @@
     z-index: 3;
   }
 
+  .loading-overlay.no-opacity {
+    background: rgb(27, 29, 44);
+  }
+
   .loading-wrapper {
     position: absolute;
     top: 50%;
