Fix overflowing buttons on Iphone

--- a/scripts/components/HUD/Buttons/Button/Button.scss
+++ b/scripts/components/HUD/Buttons/Button/Button.scss
@@ -56,6 +56,7 @@
   position: relative;
   display: block;
   transition: border-color 100ms, opacity 100ms;
+  padding: 0;
 
   &:before {
     font-family: "360-image";
