Center static image scene in FF

--- a/scripts/components/Scene/SceneTypes/StaticScene.scss
+++ b/scripts/components/Scene/SceneTypes/StaticScene.scss
@@ -6,7 +6,8 @@
   top: 0;
   background: black;
   display: flex;
-
+  text-align: center;
+  
   .image-scene-wrapper {
     margin: auto;
     position: relative;
