HFP-2676 Fix loading text centering

--- a/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
+++ b/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
@@ -41,6 +41,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    .loader {
+      text-align: center;
+    }
   }
 
   .loading-image-wrapper {
