HFP-2676 Fix centering of close button icon

--- a/scripts/components/Dialog/Dialog.scss
+++ b/scripts/components/Dialog/Dialog.scss
@@ -37,6 +37,7 @@
   box-sizing: border-box;
 
   .close-button-wrapper {
+    line-height: 1;
     position: absolute;
     font-size: 1em;
     box-sizing: content-box;
