HFP-2676 Fix popup padding and width for phones

--- a/scripts/components/Dialog/Dialog.scss
+++ b/scripts/components/Dialog/Dialog.scss
@@ -67,7 +67,10 @@
     vertical-align: text-bottom;
   }
 }
-
+.h5p-phone-size .h5p-text-dialog {
+  width: 90%;
+  padding: 0.5em;
+}
 .h5p-text-content {
   flex: 1;
   max-height: 100%;
