HFP-2676 Fix less margin for medium tablets

--- a/scripts/components/Dialog/Dialog.scss
+++ b/scripts/components/Dialog/Dialog.scss
@@ -67,7 +67,7 @@
     vertical-align: text-bottom;
   }
 }
-.h5p-phone-size .h5p-text-dialog {
+.h5p-medium-tablet-size .h5p-text-dialog {
   width: 90%;
   padding: 0.5em;
 }
