--- a/scripts/components/Dialog/Dialog.scss
+++ b/scripts/components/Dialog/Dialog.scss
@@ -29,6 +29,7 @@
   left: 50%;
   top: 50%;
   width: 80%;
+  max-width: 93%;
   max-height: 87%;
   background: white;
   z-index: 1;
@@ -74,6 +75,7 @@
 .h5p-text-content {
   flex: 1;
   max-height: 100%;
+  max-width: 100%;
   overflow-y: auto;
 }
 .h5p-text-content::-webkit-scrollbar {
