--- a/scripts/components/Scene/SceneTypes/StaticScene.scss
+++ b/scripts/components/Scene/SceneTypes/StaticScene.scss
@@ -7,7 +7,7 @@
   background: black;
   display: flex;
   text-align: center;
-  
+
   .image-scene-wrapper {
     margin: auto;
     position: relative;
@@ -21,6 +21,7 @@
     .image-scene {
       height: 100%;
       width: auto;
+      max-width: 100%;
     }
   }
 
