--- a/scripts/components/Scene/SceneTypes/StaticScene.scss
+++ b/scripts/components/Scene/SceneTypes/StaticScene.scss
@@ -6,10 +6,11 @@
   top: 0;
   background: black;
   display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 
   .image-scene-wrapper {
-    margin: auto;
     position: relative;
     width: 100%;
   }
