Added left position label to all buttons

--- a/scripts/styles/colors.scss
+++ b/scripts/styles/colors.scss
@@ -1,6 +1,12 @@
 // Buttons
 $buttonBg: black;
 $interactionBg: #373e94;
+$buttonSize: 2.5em;
+
+// labels
+$labelBg: rgba(0,0,0,0.7);
+$labelColor: #FFF;
+$labelPadding: 0.5em;
 
 // Hover
 $hoverBg: #2b2b2b;
