--- a/scripts/components/Shared/NavigationButton.scss
+++ b/scripts/components/Shared/NavigationButton.scss
@@ -9,8 +9,8 @@
 .nav-button {
   position: relative;
   font-size: 1em;
-  width: 2.5em;
-  height: 2.5em;
+  width: $buttonSize;
+  height: $buttonSize;
   padding: 0;
   border-radius: 50%;
   line-height: 1;
@@ -35,6 +35,18 @@
     background: $activeBg;
     border: 0.25em solid $activeBorder;
   }
+}
+
+.nav-label {
+  font-size: 1em;
+  line-height: 1.5;
+  padding: $labelPadding;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+  border-radius: 3px;
+  background: $labelBg;
+  color: $labelColor;
+  padding-right: $labelPadding + ($buttonSize / 2);
+  margin-right: -$buttonSize / 2;
 }
 
 .h5p-interaction-button .nav-button {
