--- a/scripts/styles/editor-customizations.scss
+++ b/scripts/styles/editor-customizations.scss
@@ -1,5 +1,5 @@
 .field-name {
-  &-field-name-playerMode, &-fitToWrapper, &-controls, &-autoplay {
+  &-playerMode, &-fitToWrapper, &-controls, &-autoplay {
     display: none;
   }
 }
