Increased font-size on three-sixty

--- a/scripts/components/Shared/NavigationButton.scss
+++ b/scripts/components/Shared/NavigationButton.scss
@@ -98,6 +98,10 @@ $labelWidth: 9em;
   }
 }
 
+.nav-button-wrapper.three-sixty .nav-label {
+    font-size: 1.8em;
+}
+
 .h5p-interaction-button .nav-button {
   background: $interactionBg;
 
