HFP-2698 - 2nd and 3rd issues

--- a/scripts/styles/editor-customizations.scss
+++ b/scripts/styles/editor-customizations.scss
@@ -1,5 +1,8 @@
-.field-name {
-  &-playerMode, &-fitToWrapper, &-controls, &-autoplay {
+.h5p-audio-editor .field-name {
+  &-playerMode,
+  &-fitToWrapper,
+  &-controls,
+  &-autoplay {
     display: none;
   }
 }
