--- a/scripts/components/Shared/NavigationButton.scss
+++ b/scripts/components/Shared/NavigationButton.scss
@@ -68,27 +68,22 @@ $labelWidth: 9em;
     }
   }
 
-  &:before,
-  &:after {
+  &.can-expand:before,
+  &.can-expand:after {
     content: ' ';
     position: absolute;
     border-style: solid;
-    display: none;
+    display: block;
     border-width: 5px;
     left: 0;
   }
 
-  .nav-label.can-expand &:before,
-  .nav-label.can-expand &:after {
-    display: block;
-  }
-
-  .nav-label.can-expand &:before {
+  &.can-expand:before {
     border-color: #fff transparent transparent transparent;
     bottom: -1.5em;
   }
 
-  .nav-label.can-expand &:after {
+  &.can-expand:after {
     border-color: #000 transparent transparent transparent;
     bottom: calc(-1.5em + 1px);
   }
