--- a/scripts/components/Shared/NavigationButton.scss
+++ b/scripts/components/Shared/NavigationButton.scss
@@ -9,6 +9,10 @@ $labelWidth: 9em;
   display: inline-flex;
 }
 
+.nav-button-wrapper:hover .nav-label.hover-only {
+  display: block;
+} 
+
 .nav-button {
   position: relative;
   font-size: 1em;
@@ -57,6 +61,10 @@ $labelWidth: 9em;
     overflow: hidden;
     white-space: nowrap;
     text-align: center;
+  }
+
+  &.hover-only {
+    display: none;
   }
   
   &.is-expanded {
