HFP - 3174 Changed the label to a button
 This makes the button appear in the tab order

--- a/scripts/components/Shared/NavigationButton.scss
+++ b/scripts/components/Shared/NavigationButton.scss
@@ -55,6 +55,7 @@ $labelWidth: 9em;
   border-radius: 3px;
   background: $labelBg;
   color: $labelColor;
+  border: 0;
 
   &-inner {
     text-overflow: ellipsis;
